static/css/styles.css
/* ... */
@media(max-width: 767px) {
	/* Imitate a H1 for the toolbar brand on mobile */
	.navbar-toolbar .navbar-brand {
		font-size: 36px;
		font-weight: 500;
		line-height: 1.1;
		height: auto;
	}
	
	.navbar-toolbar a.navbar-brand, .navbar-toolbar .navbar-brand-link {
		color: #333;
		text-decoration: none;
	}
	
	.navbar-toolbar .navbar-toggle {
		padding: 15px 10px;
	}
	
	table.collapse-to-list, table.collapse-to-list tbody, table.collapse-to-list tr, table.collapse-to-list td {
		display: block;
	}
	
	table.collapse-to-list thead {
		display: none;
	}
	
	.collapse-to-timestamp {
		float: right;
		font-size: 85%;
		max-width: 20%;
	}
	
	.collapse-to-title {
		float: left;
		font-weight: bold;
		max-width: 80%;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
	}
}

.form-group .form-control {
	margin-bottom: 10px;
}
.form-group .form-control:last-child, .navbar .form-control {
	margin-bottom: 0;
}

/* Give data-href-ed elements the cursor of a "real" link */
[data-href] {
	cursor: pointer;
}

.msg-header {
	word-wrap: break-word;
}
.msg-body {
	max-width: 100%;
	overflow: scroll;
}

.nowrap {
	white-space: nowrap;
	text-overflow: ellipsis;
}

dd, .panel-title {
	overflow: hidden;
	text-overflow: ellipsis;
}

pre.panel-body {
	border: none;
	margin: 0;
}

.preview-headers-container {
	background-color: #fafafa;
	color: #888;
}

.preview-headers span, .preview-headers ins, .preview-headers del {
	display: block;
	font-family: monospace;
	white-space: normal;
}

.preview-headers ins {
	text-decoration: none;
	color: green;
	background-color: #ddffdd;
}

.preview-headers del {
	text-decoration: none;
	color: red;
	background-color: #ffdddd;
}

.preview-headers-legend div {
	float: left;
	width: 8px;
	height: 8px;
	margin-top: 3px;
	margin-right: 3px;
}

.preview-headers-legend p {
	float: left;
	font-size: 10px;
	margin-right: 10px;
	font-family: monospace;
}

/*.navbar-toolbar .navbar-collapse {
	border-color: #E7E7E7;
}*/

/*.navbar-enduser .navbar-brand, .navbar-enduser .navbar-toggle {
	color: #ccc;
}

.navbar-enduser {
	border-radius: 0;
	background-color: #444;
	background: linear-gradient(#444, #000);
	background: -moz-linear-gradient(#444, #000);
	background: -webkit-linear-gradient(#444, #000);
	background: -o-linear-gradient(#444, #000);
	background: -ms-linear-gradient(#444, #000);
	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#444444', endColorstr='#000000')";
	padding: 0;
	min-height: 35px !important;
}

.navbar-enduser .navbar-nav > li {
	padding-top: 6px;
}

.navbar-enduser .navbar-nav > li > a {
	background-repeat: no-repeat;
	background-position: 7px 6px;
	margin-top: 5px;
	padding-top: 4px;
	padding-left: 30px;
	padding-right: 8px;
	padding-bottom: 0;
	color: #ccc;
	border-top-right-radius: 5px;
	border-top-left-radius: 5px;
}

.navbar-enduser .navbar-nav > li.active > a, .navbar-enduser .navbar-nav > li > a:hover {
	background-color: #eee;
	color: #f60;
	font-weight: bold;
}

.navbar-enduser a {
	color: #ccc;
	text-decoration: none;
}

.navbar-enduser .icon-bar {
	background-color: #ccc;
}

.navbar-enduser li.mail a {
	background-image: url(../img/mail-16-white.png);
}

.navbar-enduser li.mail.active a, .navbar-enduser li.mail a:hover {
	background-image: url(../img/mail-16-black.png);
}

.navbar-enduser li.bwlist a {
	background-image: url(../img/clipboard-16-white.png);
}

.navbar-enduser li.bwlist.active a, .navbar-enduser li.bwlist a:hover {
	background-image: url(../img/clipboard-16-black.png);
}

.navbar-enduser li.user a {
	background-image: url(../img/user-16-white.png);
}

.navbar-enduser li.user.active a, .navbar-enduser li.user a:hover {
	background-image: url(../img/user-16-black.png);
}

.navbar-enduser li.logout a {
	background-image: url(../img/signout-16-white.png);
}

.navbar-enduser li.logout.active a, .navbar-enduser li.logout a:hover {
	background-image: url(../img/signout-16-black.png);
}

#header {
	overflow: hidden;
	width: 100%;
	background: #eee;
	background: linear-gradient(#eee, #ccc);
	background: -moz-linear-gradient(#eee, #ccc);
	background: -webkit-linear-gradient(#eee, #ccc);
	background: -o-linear-gradient(#eee, #ccc);
	background: -ms-linear-gradient(#eee, #ccc);
	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#cccccc')";
	border-bottom: 1px solid #aaa;
	height: 90px;
	box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.15);
	-webkit-box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.15);
	-moz-box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.15);
}

#header h1 {
	font-weight: normal;
	float: left;
	font-family: ostrich-rounded;
	font-size: 45px;
	color: #08d;
	margin: 0;
	padding: 20px;
	cursor: default;
}

#header .item {
	position: relative;
	margin-top: 20px;
	margin-left: 20px;
	float: left;
	text-align: center;
	position: relative;
}

#header .item .divider {
	height: 50px;
	width: 1px;
	background-color: black;
	opacity: 0.2;
	border-right: 1px solid white;
}

#header .item select {
	clear: right;
}

#header .item label {
	position: absolute;
	top: 35px;
	clear: both;
	display: inline;
	text-align: center;
	left: 0;
	right: 0;
	width: auto;
	font-family: sans-serif;
	font-size: 12px;
	text-shadow: 0 1px 1px white;
}

#header .item div.button, #header .item button {
	width: 60px;
	height: 60px;
	float: left;
	background-repeat: no-repeat;
	color: black;
	padding-top: 30px;
	border: 0;
	cursor: default;
	text-shadow: 0 1px 1px white;
	font-family: sans-serif;
	background-color: transparent;
	font-size: 12px;
	background-position: center top;
}

#header .item div.button {
	padding-top: 36px;
}

#header button::-moz-focus-inner {
	border: 0;
}

#header button:focus {
	outline: none;
}

#header .search {
	background-image: url(../img/magnifying-22-blue.png);
}

#header .start {
	background-image: url(../img/start-22-blue.png);
}

#header .back {
	background-image: url(../img/back-22-blue.png);
}

#header .down {
	background-image: url(../img/down-22-blue.png);
}
/* ... */

